# p4-16-spec-jp

./: .gitignore  Makefile  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: index.md  license.md  notice.md
docs/chapters/appendix-A/: A-02-summary-of-changes-made-in-version-1.2.5-released-october-11-2024.md  A-03-summary-of-changes-made-in-version-1.2.4-released-may-15-2023.md  A-04-summary-of-changes-made-in-version-1.2.3-released-july-11-2022..md  A-05-summary-of-changes-made-in-version-1.2.2-released-may-17-2021.md  A-06-summary-of-changes-made-in-version-1.2.1-released-june-11-2020.md  A-07-summary-of-changes-made-in-version-1.2.0-released-october-14-2019.md  A-08-summary-of-changes-made-in-version-1.1.0-released-november-26-2017..md  index.md
docs/chapters/appendix-B/: index.md
docs/chapters/appendix-C/: index.md
docs/chapters/appendix-D/: index.md
docs/chapters/appendix-E/: index.md
docs/chapters/appendix-F/: index.md
docs/chapters/appendix-G/: index.md
docs/chapters/chapter-01/: index.md
docs/chapters/chapter-02/: index.md
docs/chapters/chapter-03/: 03-01-benefits-of-p4.md  03-02-p4-language-evolution-comparison-to-previous-versions-p4-v1.0-v1.1.md  index.md
docs/chapters/chapter-04/: 04-01-standard-architectures.md  04-02-data-plane-interfaces.md  04-03-extern-objects-and-functions.md  index.md
docs/chapters/chapter-05/: 05-01-very-simple-switch-architecture.md  05-02-very-simple-switch-architecture-description.md  (+2 more)
docs/stylesheets/: announce.css
overrides/: main.html
(+95 files in other folders)
