[project]
name = "p4-spec-ja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.2",
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-material>=9.6.20",
]
